Fixed Text Align

--- a/styles/about.less
+++ b/styles/about.less
@@ -1,5 +1,10 @@
+.about-text {
+  display:block!important;
+  margin:0 0 20px 0;
+}
+
 .about-body {
-  min-height:450px;
+  min-height:500px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -15,3 +20,4 @@
   min-height:60px;
   display:inline-block;
 }
+
