--- a/styles/mobile.less
+++ b/styles/mobile.less
@@ -31,7 +31,7 @@
   }
 
   .about {
-    height:600px;
+    height:800px;
   }
 
   .support-icons {
